# pyro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh  install.bat  install.sh  pyro-linux-x86_64
docs/: AI_ML_ROADMAP.md  CONCURRENCY.md  DATA_SCIENCE.md  INSTALLATION.md  LANGUAGE_GUIDE.md  STDLIB.md  VISUALIZATION.md  WEB_DEV.md
examples/: all_modules.ro  app.js  async_channels.ro  async_demo.ro  basics.ro  benchmark.py  benchmark.ro  builtin_power.ro  circular_a.ro  circular_b.ro  crypto_real.ro  data_advanced.ro  data_analysis.ro  data_science.ro  dupes.csv  error_advanced.ro  error_handling.ro  fibonacci.ro  fizzbuzz.ro  full_showcase.ro  hello.ro  img_demo.ro  index.html  list_power.ro  map_test.ro  mylib.ro  no_types_needed.ro  pattern_matching.ro  phase2_showcase.ro  phase4_showcase.ro  pipes_and_chains.ro  prices.csv  sales_advanced.csv  secure_app.ro  simple_syntax.ro  sparse.csv  static_server.ro  stdlib_75.ro  stdlib_76.ro  string_interp.ro  (+11 more)
examples/multipage-site/: server.ro
installer/: LICENSE.txt  pyro_setup.nsi
showcase/pastebin/: server.ro
src/: main.cpp
src/codegen/: codegen.cpp  codegen.h  cpp_emitter.cpp
src/lexer/: lexer.cpp  lexer.h  (+2 more)
stdlib/: auth.ro  cache.ro  cloud.ro  crypto.ro  data.ro  db.ro  img.ro  io.ro  json.ro  log.ro  math.ro  ml.ro  net.ro  queue.ro  strings.ro  test.ro  time.ro  ui.ro  utils.ro  validate.ro  viz.ro  web.ro
tests/: test_main.cpp
website/: api.html  chatbot.html  compare.html  docs.html  examples.html  index.html  install.html  install.ps1  install.sh  learn.html  playground.html
(+31 files in other folders)
